# desertedcraft

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: fragment.glsl  vertex.glsl
include/desertedcraft/: ChunkManager.h  application.h  block.h  chunk.h  chunkmanager.h  drawable.h  drawable_block.h  drawable_mesh.h  gamestate.h  mesher.h  mesher_basic.h  mesher_naive.h  naive_mesher.h  renderer.h  shader.h  window.h
include/glad/: glad.h
shaders/: basic_vertex.glsl  fragment.glsl
src/: application.cpp  application.h  block.cpp  block.h  camera.cpp  camera.h  chunk.cpp  chunk.h  chunkmanager.cpp  chunkmanager.h  drawable.cpp  drawable.h  drawable_block.cpp  drawable_mesh.cpp  gamestate.cpp  gamestate.h  glad.c  main.cpp  main2.cpp  mesher.cpp  mesher.h  mesher_basic.cpp  mesher_naive.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  triangle.h  window.cpp
